# glThings

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  compile_flags.txt  glThings
CMake/: cmake_uninstall.cmake.in  glThingsConfig.cmake.in
src/: GLManager.hpp  main.cpp  physSolver.hpp  renderer.hpp  shader_s.hpp
src/shaders/: shader.frag  shader.vert
